# challenge-project

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: ci.yml  ci1.yml
app/: CMakeLists.txt
app/src/: main.cpp
cmake/: InstallDeps.cmake  Sanitizers.cmake
plugin/: CMakeLists.txt
plugin/src/: plugin.cpp
plugin_segfault/: CMakeLists.txt
plugin_segfault/include/plugin_segfault/: plugin_segfault.h
plugin_segfault/src/: plugin_segfault.cpp
profiles/: linux-clang  linux-gcc  windows-msvc
tests/: CMakeLists.txt  test_plugin.cpp  test_plugin_segfault.cpp
